<?xml version="1.0"?>
<package>
  <name>line_follower</name>
  <version>0.0.0</version>
  <description>The line_follower package</description>
  <maintainer email="memon3669@gmail.com"></maintainer>
  <license>BSD</license>
  <author email="memon3669@gmail.com">Morgan Quigley</author>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <export>
    <gazebo_ros gazebo_media_path="${prefix}"/>
  </export>
</package>
